<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/login_details"
        style="@style/CustomTextViewLargeBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_details"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_default"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        style="@style/CustomTextViewMediumBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_default"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_details"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginEnd="@dimen/view_right_margin_default"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:hint="@string/login_email_hint"

        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:backgroundTint="@color/colorInputLine"
        style="@style/CustomEditText" />

    <TextView
        android:id="@+id/password"
        style="@style/CustomTextViewMediumBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_medium"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginEnd="@dimen/view_right_margin_default"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:hint="@string/login_password_hint"

        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:backgroundTint="@color/colorInputLine"
        style="@style/CustomEditText" />

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginEnd="@dimen/view_right_margin_default"
        android:layout_marginTop="@dimen/button_top_margin"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        android:background="@drawable/button_bg"
        style="@style/CustomButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>