<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.status.SelectStatusActivity"
    android:background="@android:color/white"
    android:padding="@dimen/view_padding_default">

    <ImageView
        android:id="@+id/close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/status_title"
        style="@style/CustomTextViewLargeBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_default"
        android:text="@string/status_title"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <RadioGroup
        android:id="@+id/radio_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_title"
        android:layout_marginTop="@dimen/view_top_margin_default">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/ready"
            style="@style/CustomTextViewMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_ready"
            android:buttonTint="@color/colorStatusGreen"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/full"
            style="@style/CustomTextViewMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin_small"
            android:text="@string/status_truck_full"
            android:buttonTint="@color/colorStatusRedLight"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/onbreak"
            style="@style/CustomTextViewMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin_small"
            android:text="@string/status_on_break"
            android:buttonTint="@color/colorStatusYellow"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/busy"
            style="@style/CustomTextViewMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin_small"
            android:text="@string/status_busy"
            android:buttonTint="@color/colorStatusRed"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>