<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CustomTextViewBigHeader"/>


    <TextView
        android:id="@+id/password"
        style="@style/CustomTextViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_default"
        android:text="@string/new_password"
        android:textColor="@android:color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />


    <EditText
        android:id="@+id/edit_password"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/edit_text_margin"

        android:layout_marginEnd="@dimen/view_right_margin_default"
        android:background="@drawable/rounded_corner_edittext"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/confirm_password"
        style="@style/CustomTextViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_medium"
        android:text="@string/reenter_new_password"
        android:textColor="@android:color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <EditText
        android:id="@+id/edit_confirm_password"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/edit_text_margin"

        android:layout_marginEnd="@dimen/view_right_margin_default"
        android:background="@drawable/rounded_corner_edittext"
        android:hint="@string/login_password_hint"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <Button
        android:id="@+id/submit"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/view_left_margin_default"
        android:layout_marginTop="@dimen/view_top_margin_medium"
        android:layout_marginEnd="@dimen/view_right_margin_default"
        android:background="@drawable/button_bg"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>