<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:padding="@dimen/view_top_margin_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/reset_success">
        </ImageView>

    </LinearLayout>

    <TextView
        style="@style/CustomTextViewBigHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_password_message"
        android:textColor="@android:color/white" />

    <TextView
        style="@style/CustomTextViewBigHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_default"
        android:gravity="center"
        android:text="@string/reset_password_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/view_top_margin_default"
        android:background="@drawable/button_bg"
        android:text="@string/btn_login" />

</LinearLayout>